--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://Ludfive.github.io/provaLudmila",
+  "homepage": "http://Ludfive.github.io/provaLudmila/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.0",
     "@testing-library/jest-dom": "^5.17.0",
